--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ ANDROID_BUILD_TARGET_SDK_VERSION=22
 ANDROID_BUILD_TOOLS_VERSION=22.0.1
 MIN_SDK_VERSION=14
 TARGET_SDK_VERSION=22
+VERSION_CODE=1
+VERSION_NAME=1.1.0
 
 KEYSTORE_PASSWORD=lgp515641
 KEY_PASSWORD=lgp515641
