--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,18 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:name=".App"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/RedTheme">
 
-        <activity android:name=".ui.MainActivity"
-            android:theme="@style/MainTheme">
+        <activity
+            android:name=".ui.MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
@@ -24,21 +27,29 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/SettingTheme"
-            android:name=".ui.SettingActivity">
+            android:name=".ui.SettingActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="standard">
         </activity>
-        <activity android:name=".ui.NoteActivity"
-            android:theme="@style/MainTheme">
+
+        <activity
+            android:name=".ui.NoteActivity"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".ui.AboutActivity"
-            android:theme="@style/MainTheme">
+        <activity
+            android:name=".ui.AboutActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".ui.PayActivity">
-        </activity>
-        <activity android:name=".ui.EditNoteTypeActivity"
-            android:theme="@style/MainTheme">
 
+        <activity
+            android:name=".ui.PayActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".ui.EditNoteTypeActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
