--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,24 @@
-# Project-wide Gradle settings.
-
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
+## Project-wide Gradle settings.
+#
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
-ANDROID_BUILD_COMPILE_SDK_VERSION=22
-ANDROID_BUILD_TARGET_SDK_VERSION=22
-ANDROID_BUILD_TOOLS_VERSION=22.0.1
-MIN_SDK_VERSION=14
-TARGET_SDK_VERSION=22
-VERSION_CODE=4
+#Sat Aug 01 23:55:07 CST 2015
+systemProp.http.proxyPort=1080
 VERSION_NAME=1.2.0
+VERSION_CODE=4
+ANDROID_BUILD_TARGET_SDK_VERSION=22
+MIN_SDK_VERSION=14
+ANDROID_BUILD_TOOLS_VERSION=22.0.1
+TARGET_SDK_VERSION=22
+systemProp.http.proxyHost=127.0.0.1
+ANDROID_BUILD_COMPILE_SDK_VERSION=22
