--- a/evernote-sdk/build.gradle
+++ b/evernote-sdk/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile 'org.scribe:scribe:1.3.5'
     compile 'net.vrallev.android:android-task:1.0.4'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.pnikosis:materialish-progress:1.5'
 }
 
 android {
