--- a/gradle.properties
+++ b/gradle.properties
@@ -13,12 +13,10 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Sat Aug 01 23:55:07 CST 2015
-systemProp.http.proxyPort=1080
 VERSION_NAME=1.2.0
 VERSION_CODE=4
 ANDROID_BUILD_TARGET_SDK_VERSION=22
 MIN_SDK_VERSION=14
-ANDROID_BUILD_TOOLS_VERSION=22.0.1
+ANDROID_BUILD_TOOLS_VERSION=23
 TARGET_SDK_VERSION=22
-systemProp.http.proxyHost=127.0.0.1
 ANDROID_BUILD_COMPILE_SDK_VERSION=22
