--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,5 @@ VERSION_NAME=1.2.0
 VERSION_CODE=4
 ANDROID_BUILD_TARGET_SDK_VERSION=22
 MIN_SDK_VERSION=14
-ANDROID_BUILD_TOOLS_VERSION=23
-TARGET_SDK_VERSION=22
+ANDROID_BUILD_TOOLS_VERSION=23.0.0
 ANDROID_BUILD_COMPILE_SDK_VERSION=22
