--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,12 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Sep 02 21:42:06 CST 2015
+#Sun Dec 06 17:19:12 CST 2015
+systemProp.http.proxyHost=127.0.0.1
 ANDROID_BUILD_TARGET_SDK_VERSION=22
 VERSION_NAME=2.0.0
 ANDROID_BUILD_COMPILE_SDK_VERSION=22
-ANDROID_BUILD_TOOLS_VERSION=23.0.0
 VERSION_CODE=5
+ANDROID_BUILD_TOOLS_VERSION=23.0.0
 MIN_SDK_VERSION=14
+systemProp.http.proxyPort=1080
